fix(team): increase spacing between items

--- a/src/pages/Team/Team.scss
+++ b/src/pages/Team/Team.scss
@@ -24,7 +24,7 @@
     border-radius: 50%;
     border: 2px solid #e5e7eb;
     overflow: hidden;
-    width: 90%;
+    width: 80%;
     transition: border-radius 0.3s ease;
 
     &:hover {
